vlib/v/checker/tests/inout/assign_expr_type_err_a.vv
fn main() {
	mut a := 10
	a <<= 0.5
}